# screen-recorder

./: CMakeLists.txt
rpm/: info.you_ra.screen_recorder.spec
src/: main.cpp
